2011-09-14	Alexander A. Zaytsev

	* core/Form/Primitives/PrimitiveString.class.php: import only scalar values,
	except bool.

	* core/Form/Filter.class.php: fix filter order in Filter::textImport().

2011-09-01	Sergey S. Sergeev

	* main/Utils/AMQP/AMQPQueueConsumer.class.php,
	main/Utils/AMQP/AMQPConsumer.class.php,
	main/Utils/AMQP/AMQPDefaultConsumer.class.php,
	main/Utils/AMQP/AMQPChannelInterface.class.php,
	main/Utils/AMQP/Pecl/AMQPPeclChannel.class.php:
	consumer logic implemented, phpDoc updated.

	* main/Utils/AMQP/AMQPIncomingMessage.class.php: typo fixed.

2011-08-26	Sergey S. Sergeev

	* main/Utils/AMQP/AMQPChannelInterface.class.php,
	main/Utils/AMQP/AMQPBaseChannel.class.php, main/Utils/AMQP/AMQP.class.php,
	main/Utils/AMQP/Pecl/AMQPPeclChannel.class.php,
	main/Utils/AMQP/Pecl/AMQPPecl.class.php, main/Utils/AMQP/Exceptions:
	extract AMQPChannelInterface, all channel classes implements
	AMQPChannelInterface; methods returns an instance of AMQPChannelInterface;
	throws AMQPServerException, AMQPServerConnectionException if RabbitMQ
	is down OR connection is not available.

2011-08-18	Evgeny V. Kokovikhin

	* main/Criteria/Projections/CountProjection.class.php,
	main/Criteria/Projections/PropertyProjection.class.php:
	criteria's query for sqlite fixed

2011-07-26	Dmitry V. Snezhinskiy, Alexey S. Denisov

	* main/Flow/JsonView.class.php, 
	test/main/JsonViewTest.class.php: add JsonView.

2011-07-14	Evgeny V. Kokovikhin

	* main/Net/Ip/IpRange.class.php: range with single ip fixed.

2011-07-14	Evgeny V. Kokovikhin

	* core/DB/ImaginaryDialect.class.php: quiting added

2011-07-13 	Evgeny V. Kokovikhin

	* core/DB/Dialect.class.php, core/DB/PgSQL.class.php,
	core/DB/PostgresDialect.class.php, core/Form/Primitive.class.php
	core/Form/Primitives/BaseObjectPrimitive.class.php,
	core/Form/Primitives/PrimitiveIpAddress.class.php,
	core/Form/Primitives/PrimitiveIpRange.class.php,
	core/Logic/Expression.class.php, core/Logic/Ip4ContainsExpression.class.php,